prevent horizontal scrolling when vertical scrollbar appears

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 body {
   background: var(--black);
   color: var(--white);
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 0;
